--- a/frontend/src/app/styles/globals.css
+++ b/frontend/src/app/styles/globals.css
@@ -1,10 +1,13 @@
 /* Global styling */
-body {
+
+body, html {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
   background: linear-gradient(135deg, #000000 0%, #251203 30%, #b75a18 100%);
   min-height: 100vh;
+  height: 100%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
